--- a/FeatureExtraction/featureExtraction.tex
+++ b/FeatureExtraction/featureExtraction.tex
@@ -1,4 +1,4 @@
-% Created 2017-03-21 Tue 12:25
+% Created 2017-03-22 Wed 07:14
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt,aspectratio=1610]{beamer}
 \usepackage[utf8]{inputenc}
@@ -40,8 +40,8 @@
 \end{frame}
 
 \section{Motivations}
-\label{sec:org85bec41}
-\begin{frame}[label={sec:org493b370}]{Illustration}
+\label{sec:orga3c55e9}
+\begin{frame}[label={sec:org6a67844}]{Illustration}
 \begin{itemize}
 \item <1-> \alert{Curse of dimensionality}: it is not possible to get enough data to cover all the observation space.
 \begin{center}
@@ -63,7 +63,7 @@
 \end{center}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org8e166e1}]{Application}
+\begin{frame}[label={sec:org1bf45c9}]{Application}
 \begin{itemize}
 \item Feature extraction is important in remote sensing because:
 \begin{itemize}
@@ -89,10 +89,10 @@
 \end{frame}
 
 \section{Physical Indices}
-\label{sec:orgeedf05f}
+\label{sec:org88e9655}
 \subsection{Introduction}
-\label{sec:org7df731d}
-\begin{frame}[label={sec:org426be57}]{Spectral indices}
+\label{sec:orge0f60fa}
+\begin{frame}[label={sec:org89c16ca}]{Spectral indices}
 \begin{itemize}
 \item Spectral indices are a linear/non-linear combination of two (or more) spectral bands.
 \item They provides information as a \emph{single number} about:
@@ -119,7 +119,7 @@ Soil-adjusted vegetation index & \((1+L)\times\dfrac{R_{\lambda_1} - R_{\lambda_
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5156a75}]{Conventional Indices}
+\begin{frame}[label={sec:org471df03}]{Conventional Indices}
 Index database : \url{http://www.indexdatabase.de/}
 
 \begin{center}
@@ -143,8 +143,8 @@ Soil Brightness Index & \(0.406R_{\lambda{550}}+0.600R_{\lambda{650}}+0.645R_{\l
 \end{frame}
 
 \subsection{Vegetation Indices}
-\label{sec:orgebb83ab}
-\begin{frame}[label={sec:org25dbeb1}]{Normalized difference vegetation index}
+\label{sec:org5a630b7}
+\begin{frame}[label={sec:org1aa99e5}]{Normalized difference vegetation index}
 $$\text{NDVI}=\dfrac{R_{\lambda_{800}} - R_{\lambda_{670}}}{R_{\lambda_{800}} + R_{\lambda_{670}}}$$
 \begin{itemize}
 \item \(-1\leq \text{NVDI} \leq 1\)
@@ -168,8 +168,8 @@ $$\text{NDVI}=\dfrac{R_{\lambda_{800}} - R_{\lambda_{670}}}{R_{\lambda_{800}} + 
 \end{center}
 \end{frame}
 \subsection{Case study}
-\label{sec:org73df3ef}
-\begin{frame}[label={sec:org3de5f0c}]{University of Pavia}
+\label{sec:orgb60db9b}
+\begin{frame}[label={sec:orgb12fdfb}]{University of Pavia}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -189,7 +189,7 @@ $$\text{NDVI}=\dfrac{R_{\lambda_{800}} - R_{\lambda_{670}}}{R_{\lambda_{800}} + 
 \end{columns}
 \end{frame}
 
-\begin{frame}[fragile,label={sec:org184bd79}]{Orfeo-Toolbox}
+\begin{frame}[fragile,label={sec:org736806a}]{Orfeo-Toolbox}
  \begin{itemize}
 \item \href{https://www.orfeo-toolbox.org/}{OTB} is a C++ library for remote sensing images processing.
 \item It is free, open-source and available for most OS (window, apple, linux)
@@ -209,7 +209,7 @@ otbcli_BandMath -il ../Data/university.tif -out ../Data/university_sbi.tif \
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orga48b1ce}]{University of Pavia - Spectral Indices}
+\begin{frame}[label={sec:org83d1f05}]{University of Pavia - Spectral Indices}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{center}
@@ -231,7 +231,7 @@ otbcli_BandMath -il ../Data/university.tif -out ../Data/university_sbi.tif \
 \end{columns}
 \end{frame}
 
-\begin{frame}[fragile,label={sec:org8030999}]{Where is the vegetation 1/2 ?}
+\begin{frame}[fragile,label={sec:org8f73f04}]{Where is the vegetation 1/2 ?}
    \begin{center}
   \begin{tikzpicture}
     \begin{axis}[grid=both,width=0.95\linewidth,height=0.45\linewidth,/pgf/number format/1000 sep={},/pgf/number format/fixed,title=Density plot of the NDVI,xmin=-0.6,xmax=1,ymin=0,ymax=0.01]
@@ -249,7 +249,7 @@ otbcli_BandMath -il ../Data/university_ndvi.tif -out ../Data/university_ndvi_seg
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org086c61c}]{Where is the vegetation 2/2 ?}
+\begin{frame}[label={sec:orgb6dc2bf}]{Where is the vegetation 2/2 ?}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{center}
@@ -266,8 +266,8 @@ otbcli_BandMath -il ../Data/university_ndvi.tif -out ../Data/university_ndvi_seg
 \end{frame}
 
 \subsection{Question}
-\label{sec:org7904777}
-\begin{frame}[label={sec:org9870802}]{Could you find the good one ?}
+\label{sec:orga0a8dcd}
+\begin{frame}[label={sec:org394d748}]{Could you find the good one ?}
  \centerline{\begin{tabular}{cc}
     \includegraphics[width=0.4\linewidth]{figures/image1.jpg} & \begin{tikzpicture}\pgfplotsset{every axis legend/.append style={at={(0.5,1.03)},anchor=south}}
       \begin{axis}[ytick=\empty,xmin=-0.5,xmax=0.9,ymin=0,width=0.5\linewidth,axis y line=center,axis x line=bottom,legend columns=4]
@@ -289,10 +289,10 @@ otbcli_BandMath -il ../Data/university_ndvi.tif -out ../Data/university_ndvi_seg
 From the histogram, which one does correspond to the NDVI of the image ?
 \end{frame}
 \section{Statistical Feature Extraction}
-\label{sec:org39af540}
+\label{sec:org3845fec}
 \subsection{Unsupervised}
-\label{sec:orgc08675e}
-\begin{frame}[label={sec:orge896d75}]{Principal Components Analysis}
+\label{sec:org9c2fec7}
+\begin{frame}[label={sec:org3f6b6bb}]{Principal Components Analysis}
 \begin{itemize}
 \item Linear transformation used to reduce the dimensionality of the data \cite{jolliffe2002principal}.
 $$ z_i = \langle\mathbf{v}_i,\mathbf{x}\rangle$$
@@ -315,7 +315,7 @@ $$ z_i = \langle\mathbf{v}_i,\mathbf{x}\rangle$$
   \end{tikzpicture}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org87bba27}]{Maximization of the variance 1/2}
+\begin{frame}[label={sec:org2bd2e21}]{Maximization of the variance 1/2}
 \begin{itemize}
 \item <1-> Search \(\mathbf{v}_1\) such as \(\max\text{var}(z_1)\):
 \begin{eqnarray*}
@@ -341,7 +341,7 @@ $$ z_i = \langle\mathbf{v}_i,\mathbf{x}\rangle$$
 \end{eqnarray*}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org8c0d7dc}]{Maximization of the variance 2/2}
+\begin{frame}[label={sec:orgc618f5a}]{Maximization of the variance 2/2}
 \begin{itemize}
 \item <1-> Search \(\mathbf{v}_2\) such as \(\max\text{var}(z_2)\) and \(\langle\mathbf{v}_2,\mathbf{v}_2\rangle=1\) and \(\langle\mathbf{v}_1,\mathbf{v}_2\rangle=0\)
 \item <2-> Lagrangian:
@@ -367,7 +367,7 @@ $$ z_i = \langle\mathbf{v}_i,\mathbf{x}\rangle$$
 \item <7-> \(\mathbf{v}_k\) is the eigenvector corresponding the \emph{\(k^{\text{th}}\) largest} eigenvalues
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org2da02b6}]{PCA in practice}
+\begin{frame}[label={sec:org2653f86}]{PCA in practice}
 \begin{enumerate}
 \item Empirical estimation the mean value:
 \begin{eqnarray*}
@@ -382,7 +382,7 @@ $$\frac{\sum_{i=1}^p\lambda_i}{\sum_{i=1}^d\lambda_i}$$
 \item Tips for high dimensional data set: if \(n<d\) see \cite{manolakis2016hyperspectral} page 420
 \end{enumerate}
 \end{frame}
-\begin{frame}[fragile,label={sec:org502bad0}]{PCA case study 1/3}
+\begin{frame}[fragile,label={sec:org1539441}]{PCA case study 1/3}
  \begin{minted}[fontsize=\footnotesize,obeytabs=true,tabsize=4,bgcolor=bg]{python}
 import rasterTools as rt
 import scipy as sp
@@ -405,7 +405,7 @@ sp.savetxt('../FeatureExtraction/figures/pca_pcs.csv',D,delimiter=',')
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org4777001}]{PCA case study 2/3}
+\begin{frame}[label={sec:orge771d8b}]{PCA case study 2/3}
 \begin{itemize}
 \item Explained variance
 \begin{center}
@@ -431,7 +431,7 @@ sp.savetxt('../FeatureExtraction/figures/pca_pcs.csv',D,delimiter=',')
 \end{center}
 \end{itemize}
 \end{frame}
-\begin{frame}[fragile,label={sec:org6c42e81}]{PCA case study 3/3}
+\begin{frame}[fragile,label={sec:org78b1666}]{PCA case study 3/3}
  \begin{minted}[fontsize=\footnotesize,obeytabs=true,tabsize=4,bgcolor=bg]{python}
 # Projection of the first PCs
 imp = sp.dot(im,pca.components_[:3,:].T)
@@ -455,7 +455,7 @@ rt.write_data('../Data/pca_university.tif',imp,GeoT,Proj)
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgf05315f}]{Kernel PCA}
+\begin{frame}[label={sec:org5cc62b3}]{Kernel PCA}
 \begin{itemize}
 \item PCA is limited to second order information
 \item To capture higher-order statistics, it is possible to map the data onto another space \(\mathcal{H}\)
@@ -522,7 +522,7 @@ rt.write_data('../Data/pca_university.tif',imp,GeoT,Proj)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7f87a9b}]{Kernel PCA in practice}
+\begin{frame}[label={sec:org3c7880d}]{Kernel PCA in practice}
 \begin{itemize}
 \item Choose the kernel and its parameters
 \item Compute the kernel matrix \(\mathbf{K}\) for all the pixels (or a subset)
@@ -541,7 +541,7 @@ rt.write_data('../Data/pca_university.tif',imp,GeoT,Proj)
 \end{itemize}
 \end{frame}
 
-\begin{frame}[fragile,label={sec:orgfdd29df}]{KPCA case study 1/3}
+\begin{frame}[fragile,label={sec:orgab64b5f}]{KPCA case study 1/3}
  From \cite{fauvel2009kernel}.
 
 \begin{minted}[fontsize=\footnotesize,obeytabs=true,tabsize=4,bgcolor=bg]{python}
@@ -566,7 +566,7 @@ kpca = KernelPCA(kernel='rbf',gamma=1.0/b,n_jobs=-1)
 kpca.fit(im[::50,:]) # Use a subset of the total number of pixels
 \end{minted}
 \end{frame}
-\begin{frame}[label={sec:orgf8cf7bb}]{KPCA case study 2/3}
+\begin{frame}[label={sec:orgd3cf497}]{KPCA case study 2/3}
 \begin{itemize}
 \item Explained variance
 \begin{center}
@@ -610,7 +610,7 @@ kpca.fit(im[::50,:]) # Use a subset of the total number of pixels
 \end{center}
 \end{itemize}
 \end{frame}
-\begin{frame}[fragile,label={sec:orgbca6ce6}]{KPCA case study 3/3}
+\begin{frame}[fragile,label={sec:org212f67d}]{KPCA case study 3/3}
  \begin{minted}[fontsize=\footnotesize,obeytabs=true,tabsize=4,bgcolor=bg]{python}
 imp = kpca.transform(im)[:,:3]
 imp.shape = (h,w,3)
@@ -634,8 +634,8 @@ rt.write_data('../Data/kpca_university.tif',imp,GeoT,Proj)
 \end{frame}
 
 \subsection{Supervised}
-\label{sec:org6b84de8}
-\begin{frame}[label={sec:org07eaa18}]{Fisher's Discriminant Analysis}
+\label{sec:org2abd10c}
+\begin{frame}[label={sec:org685101c}]{Fisher's Discriminant Analysis}
 \begin{itemize}
 \item We observe some \(\{\mathbf{x}_i,y_i\}_{i=1}^n\)
 \item Use the label information to find the linear features that highlight differences among classes
@@ -651,7 +651,7 @@ rt.write_data('../Data/kpca_university.tif',imp,GeoT,Proj)
 \item FDA: find \(\mathbf{a}\) such as the ratio between the \emph{between projected variance} and the \emph{sample projected variance} is maximal \cite{manolakis2016hyperspectral} Chap. 8.8
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org54b14ba}]{FDA Algorithm}
+\begin{frame}[label={sec:org0fc28a0}]{FDA Algorithm}
 \begin{itemize}
 \item Between-class covariance matrix:
 \begin{eqnarray*}
@@ -669,7 +669,7 @@ rt.write_data('../Data/kpca_university.tif',imp,GeoT,Proj)
 \item Remark: there are at most \(C-1\) eigenvectors because \(\text{Rank}(\mathbf{B})\leq C-1\).
 \end{itemize}
 \end{frame}
-\begin{frame}[fragile,label={sec:orgf398f4f}]{FDA case study 1/3}
+\begin{frame}[fragile,label={sec:org44798a9}]{FDA case study 1/3}
  \begin{minted}[fontsize=\footnotesize,obeytabs=true,tabsize=4,bgcolor=bg]{python}
 import rasterTools as rt
 import scipy as sp
@@ -697,7 +697,7 @@ lda = LinearDiscriminantAnalysis(solver='eigen',shrinkage='auto')
 lda.fit(xt,yt.ravel())
 \end{minted}
 \end{frame}
-\begin{frame}[label={sec:orgc312761}]{FDA case study 2/3}
+\begin{frame}[label={sec:org6e6a13a}]{FDA case study 2/3}
 \begin{itemize}
 \item Projection on Fisher components
 \begin{center}
@@ -727,7 +727,7 @@ lda.fit(xt,yt.ravel())
 \end{center}
 \end{itemize}
 \end{frame}
-\begin{frame}[fragile,label={sec:orgc6e702f}]{FDA case study 3/3}
+\begin{frame}[fragile,label={sec:orga37aef3}]{FDA case study 3/3}
  \begin{minted}[fontsize=\footnotesize,obeytabs=true,tabsize=4,bgcolor=bg]{python}
 im,GeoT,Proj = rt.open_data('../Data/university.tif')
 [h,w,b]=im.shape
@@ -752,7 +752,7 @@ rt.write_data('../Data/lda_university.tif',imp,GeoT,Proj)
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgfc70f75}]{Feature selection}
+\begin{frame}[label={sec:orgb5f85e9}]{Feature selection}
 \begin{itemize}
 \item Feature selection: pick few features \emph{from} the original ones (no combination)
 \item In general, for feature selection, we need:
@@ -776,7 +776,7 @@ Classification error & Forward search/GA & \cite{lebris:fs,7847352}\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgb275333}]{Large scale feature selection with GMM}
+\begin{frame}[label={sec:org4a28a7c}]{Large scale feature selection with GMM}
 \begin{itemize}
 \item Fast  forward strategy  based  on  a nonlinear  model  driven by  an
 estimate of the classification error or a measure of separability:
@@ -799,7 +799,7 @@ Jeffries-Matusita distance & Divergence & Low\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd3ae3f1}]{Algorithm 1/2}
+\begin{frame}[label={sec:org83d4a9b}]{Algorithm 1/2}
 The forward feature selection works as follow:
 \begin{enumerate}
 \item Starts with an empty pool \(F\) of selected features,
@@ -816,7 +816,7 @@ low or if the maximum number of features is reached.
 \end{enumerate}
 \end{frame}
 
-\begin{frame}[label={sec:org9a9a97f}]{Algorithm 2/2}
+\begin{frame}[label={sec:org10feb74}]{Algorithm 2/2}
 \tikzset{noeud/.style={minimum width=1.5cm,minimum height=1cm,text width = 1.25cm,text centered,rounded corners=1pt,draw,rectangle,thick}}
 \tikzstyle{arrow}=[->,>=stealth,thick]
 \tikzstyle{arrow2}=[dashed,->,>=stealth,thick]
@@ -849,7 +849,7 @@ low or if the maximum number of features is reached.
 \end{tikzpicture}}}
 \end{frame}
 
-\begin{frame}[fragile,label={sec:org515d82a}]{FFFS case study 1/3}
+\begin{frame}[fragile,label={sec:org6af3a96}]{FFFS case study 1/3}
  \begin{minted}[fontsize=\footnotesize,obeytabs=true,tabsize=4,bgcolor=bg]{python}
 import rasterTools as rt
 import scipy as sp
@@ -880,7 +880,7 @@ idx, crit, [] = model.selection('forward',xt, yt,criterion='kappa', varNb=maxVar
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org74d2d84}]{FFFS case study 2/3}
+\begin{frame}[label={sec:org6c47225}]{FFFS case study 2/3}
 \begin{itemize}
 \item Criterion
   \begin{center}
@@ -915,8 +915,8 @@ idx, crit, [] = model.selection('forward',xt, yt,criterion='kappa', varNb=maxVar
 \end{frame}
 
 \subsection{Questions}
-\label{sec:org09d397b}
-\begin{frame}[fragile,label={sec:org184dc8a}]{Number of features}
+\label{sec:org17726ba}
+\begin{frame}[fragile,label={sec:org32713ba}]{Number of features}
  Given         a         set         of         observed         pixels
 \(\mathcal{S}=\{(\mathbf{x}_i,y_i)\}_{i=1}^n\)                       and
 \(\mathbf{x}\in\mathbb{R}^{d}\). The number of classes \(C\) is \(3\).  What
@@ -933,7 +933,7 @@ is the \emph{maximum} number of features that can be extracted with
 \end{itemize}
 \end{frame}
 
-\begin{frame}[fragile,label={sec:org658ec69}]{KPCA}
+\begin{frame}[fragile,label={sec:orgffe7b38}]{KPCA}
  \begin{itemize}
 \item Given the following data set, using the Gaussian kernel, how do you expect KPCA will behave: 
 
@@ -976,17 +976,30 @@ is the \emph{maximum} number of features that can be extracted with
 \end{frame}
 
 \section{Spatial feature extaction}
-\label{sec:org032f2bd}
-\begin{frame}[label={sec:org6d834b0}]{Why spatial feature extraction?}
+\label{sec:org7ac2de4}
+\begin{frame}[label={sec:org06c03f8}]{Why spatial feature extraction?}
 \centerline{\begin{tabular}{ccc}
 \includegraphics[width=0.2\linewidth]{figures/rgb_house_shuffle} & \includegraphics[width=0.2\linewidth]{figures/rgb_house_sort} & \includegraphics[width=0.2\linewidth]{figures/rgb_house_original}\\
 \includegraphics[width=0.2\linewidth]{figures/rgb_house_hist} & \includegraphics[width=0.2\linewidth]{figures/rgb_house_hist} & \includegraphics[width=0.2\linewidth]{figures/rgb_house_hist}
 \end{tabular}}
 \end{frame}
+\begin{frame}[label={sec:org55530a2}]{More on this topics}
+\begin{center}
+\alert{Image analysis of hyperspectral data using mathematical morphology}
+\end{center}
+
+\uline{Tutorial WHISPERS 2014}: Lesson, Labwork and full matlab implementation !
+
+\begin{verse}
+Dalla Mura, Mauro, \& Fauvel, Mathieu. (2014, June).\\
+Image analysis of hyperspectral data using mathematical morphology.\\
+Zenodo. \url{http://doi.org/10.5281/zenodo.437195}\\
+\end{verse}
+\end{frame}
 
 \subsection{Spatial filters}
-\label{sec:org2257302}
-\begin{frame}[label={sec:orga911cdd}]{Spatial neighborhood}
+\label{sec:org2d8ee91}
+\begin{frame}[label={sec:org28a77e5}]{Spatial neighborhood}
 \begin{itemize}
 \item The neighborhood of a given pixel is the set of pixels that are connected to it.
 \item For a flat (grayscale) image :
@@ -1024,7 +1037,7 @@ is the \emph{maximum} number of features that can be extracted with
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgf880378}]{Template filters}
+\begin{frame}[label={sec:org9fe327d}]{Template filters}
 \uline{Steps}:
 \begin{enumerate}
 \item Define the template  \(G\): 4/8-connected and size
@@ -1055,7 +1068,7 @@ Max Filter
         \draw[->,red,thick]  (4.25,4) -- (10.75,4);
       \end{tikzpicture}}}
 \end{frame}
-\begin{frame}[label={sec:org5862877}]{Some filters}
+\begin{frame}[label={sec:orgdd70c20}]{Some filters}
 \begin{itemize}
 \item G = \(\begin{bmatrix} 1 & 1  & 1 \\1 & 1  & 1 \\1 & 1  & 1 \end{bmatrix}\), for a \(3\times 3\) neighborhood.
 \item Mean filter
@@ -1068,9 +1081,9 @@ $$\mathbf{x}^{r}(x,y) = \max_{i,j\in G}[\mathbf{x}(x+i,y+j)] - \min_{i,j\in G}[\
 $$\mathbf{x}^{m}(x,y) = \text{median}_{i,j\in G}[\mathbf{x}(x+i,y+j)]$$
 \end{itemize}
 \end{frame}
-\begin{frame}[fragile,label={sec:org5862523}]{Template filters in action 1/3}
+\begin{frame}[fragile,label={sec:org091ccb9}]{Template filters in action 1/3}
  \begin{center}
-\alert{For multidimensional images: Use spectral feature extraction to get flat images!} See \ref{sec:org95f9bc4}
+\alert{For multidimensional images: Use spectral feature extraction to get flat images!} See \ref{sec:orgc94a606}
 \end{center}
 
 \begin{minted}[fontsize=\footnotesize,obeytabs=true,tabsize=4,bgcolor=bg]{sh}
@@ -1097,7 +1110,7 @@ done
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:orgf3bb8a1}]{Template filters in action 2/3}
+\begin{frame}[label={sec:org5691e50}]{Template filters in action 2/3}
 \begin{center}
 \includegraphics[trim=2.944cm 8.832cm 2.944cm 10.304cm, clip=true,width=0.22\linewidth]{./figures/university_pc1.png}
 \end{center}
@@ -1117,7 +1130,7 @@ done
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org7b8c8ae}]{Template filters in action 3/3}
+\begin{frame}[label={sec:org3712582}]{Template filters in action 3/3}
 \begin{center}
 \includegraphics[trim=2.944cm 8.832cm 2.944cm 10.304cm, clip=true,width=0.22\linewidth]{./figures/university_pc1.png}
 \end{center}
@@ -1138,8 +1151,8 @@ done
 \end{columns}
 \end{frame}
 \subsection{Mathematical morphology}
-\label{sec:org3294db7}
-\begin{frame}[label={sec:org9c18a40}]{Dilation and erosion}
+\label{sec:org9a46a4b}
+\begin{frame}[label={sec:org42c9d18}]{Dilation and erosion}
 \begin{itemize}
 \item Mathematical morphology: non-linear image processing.
 \item A lot of applications in geoscience and remote sensing, see \cite{soille:pesaresi}
@@ -1168,7 +1181,7 @@ done
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org06b0107}]{Effets of structuring elements}
+\begin{frame}[label={sec:orgc125d04}]{Effets of structuring elements}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{figure}[htbp]
@@ -1240,7 +1253,7 @@ done
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgdc644da}]{Opening and closing}
+\begin{frame}[label={sec:orgf7bb0e4}]{Opening and closing}
 \begin{itemize}
 \item \uline{Opening}:
 \begin{itemize}
@@ -1295,7 +1308,7 @@ done
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgcbd479d}]{Opening and closing profile}
+\begin{frame}[label={sec:orgc1830d1}]{Opening and closing profile}
 \begin{itemize}
 \item For a  given \(B\),  \(\gamma_{B}^r\)  (resp. \(\phi_{B}^r\))   indicates which clear (dark) objects fit \(B\).
 \begin{center}
@@ -1312,8 +1325,8 @@ done
 \end{itemize}
 \end{frame}
 \subsection{Extension to multivalued images}
-\label{sec:org95f9bc4}
-\begin{frame}[label={sec:orgebb1e31}]{Ordering relation}
+\label{sec:orgc94a606}
+\begin{frame}[label={sec:org690248d}]{Ordering relation}
 \begin{itemize}
 \item MM is based on \(\inf\) and \(\sup\) operators
 \item No unambiguous \(\inf\) / \(\sup\) for pixel/vector:
@@ -1326,8 +1339,8 @@ $$\mathbf{x}\mapsto h(x)$$
 \end{frame}
 
 \subsection{Questions}
-\label{sec:orgd7fa9ce}
-\begin{frame}[fragile,label={sec:orgbff5f7e}]{Noise filtering}
+\label{sec:org79ee717}
+\begin{frame}[fragile,label={sec:org4945299}]{Noise filtering}
  \begin{itemize}
 \item The image has been corrupted by a \emph{salt and pepper} noise, which filter should we use to filter it ?
 
@@ -1361,11 +1374,11 @@ $$\mathbf{x}\mapsto h(x)$$
 \end{frame}
 
 \section{References}
-\label{sec:orgfe386f6}
+\label{sec:org8f84602}
 \begin{frame}[fragile,allowframebreaks,label=]{Bibliography}
 \printbibliography
 \end{frame}
-\begin{frame}[label={sec:orgaeaac06}]{}
+\begin{frame}[label={sec:org89e9242}]{}
 \begin{center}
 \tiny Creative Commons Attribution-ShareAlike 4.0 Unported License
 \normalsize
