Type modificiation int16

--- a/Classification/classification.org
+++ b/Classification/classification.org
@@ -663,7 +663,7 @@ def morphological_profile(im,radius=1,step=2,no=4):
 
     # Initialization of the output
     [h,w] = im.shape
-    out = sp.empty((h,w,2*no+1))
+    out = sp.empty((h,w,2*no+1),dtype=im.dtype)
     out[:,:,no]=im.copy()
 #+END_SRC
 #+BEGIN_SRC python :tangle ../Codes/script_emp.py :exports code
@@ -888,13 +888,11 @@ EMP = sp.concatenate(EMP,axis=2)
 EMP.shape=(h*w,EMP.shape[2])
 del pcs
 #+END_SRC
-  #+BEGIN_SRC python :tangle ../Codes/script_fusion.py :exports code
+#+BEGIN_SRC python :tangle ../Codes/script_fusion.py :exports code
 # Concatenate the spectral and spatial features and do scaling
-IM_EMP = sp.concatenate((im,EMP),axis=1)
-sc = StandardScaler()
-IM_EMP = sc.fit_transform(IM_EMP)
+IM_EMP = sp.concatenate((im,EMP.astype(im.dtype)),axis=1)
 #+END_SRC
-  #+BEGIN_SRC python :tangle ../Codes/script_fusion.py :exports none
+#+BEGIN_SRC python :tangle ../Codes/script_fusion.py :exports none
 del im,EMP
 
 # Save the results
@@ -902,6 +900,11 @@ rt.write_data("../Data/fusion_inputs_university.tif",IM_EMP.reshape(h,w,IM_EMP.s
 
 # Get the training set
 X,y=rt.get_samples_from_roi('../Data/fusion_inputs_university.tif','../Data/university_gt.tif')
+
+# Scale the data
+sc = StandardScaler()
+X = sc.fit_transform(X)
+IM_EMP = sc.transform(IM_EMP)
 
 # Split the data
 X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.1,random_state=0,stratify=y)
